--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="estrutura">
         <header class="header">
-            <a href="#" class="logo"></a><img src="img/wildbeast.svg" alt="WildBeast">
+            <a href="#" class="logo"><img src="img/wildbeast.svg" alt="WildBeast"></a>
             <nav>
                 <ul>
                     <li><a href="#">Sobre</a></li>
