--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
                     <span class="rotulo">age</span>
                 </div>
             </div>
-            <p>
+            <p class="col-wide">
                 É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] 
                 O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
             </p>
-            <img src="./img/wolf1.jpg" alt="Wolf 1">
+            <img class="imagem-1" src="./img/wolf1.jpg" alt="Wolf 1">
 
-            <p>
+            <p class="destaque">
                 É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2]
                  O sequenciamento de DNA e estudos.
             </p>
            
-            <img src="./img/wolf2.jpg" alt="Wolf 2">
+            <img class="imagem-2" src=" ./img/wolf2.jpg" alt="Wolf 2">
 
             <p>
                 O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, 
@@ -69,7 +69,7 @@
                 os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.
             </p>
 
-            <blockquote class="citacao">
+            <blockquote class="citacao col-wide">
                 <p>
                     Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.
                 </p>
@@ -91,12 +91,14 @@
                     É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e 
                     estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico. 
                 </p>
-                <img src="./img/wolf3.jpg" alt="Wolf 3">
             </div>
+            <img class="col-wide" src="./img/wolf3.jpg" alt="Wolf 3">
         </main>
         <aside class="anuncios">
             <div>
                 <img src="./img/anuncio-1.jpg" alt="Anuncio 1">
+            </div>
+            <div>
                 <img src="./img/anuncio-2.jpg" alt="Anuncio 2">
             </div>
         </aside>
